codegen/tests/ui/route-bad-method.stderr
error: not a string literal
 --> $DIR/route-bad-method.rs:9:9
  |
9 | #[route(120, "/hello")]
  |         ^^^
  |
  = help: valid methods are: `GET`, `PUT`, `POST`, `DELETE`, `HEAD`, `PATCH`, `OPTIONS`

error: 'CONNECT' is not a valid method
  --> $DIR/route-bad-method.rs:12:9
   |
12 | #[route("CONNECT", "/hello")]
   |         ^^^^^^^^^
   |
   = help: valid methods are: `GET`, `PUT`, `POST`, `DELETE`, `HEAD`, `PATCH`, `OPTIONS`

error: aborting due to 2 previous errors

